# Calen

./: .dockerignore  .gitignore  .lintstagedrc  .prettierignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  UBIQUITOUS_LANGUAGE.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  desktop-release.yml  gateway-docker.yml
crates/agent-gateway/: go.mod
crates/agent-gui/: README.md  index.html  package.json  pnpm-lock.yaml
crates/stock-portfolio-core-tests/: Cargo.toml
crates/stock-portfolio-core-tests/src/: lib.rs
crates/stock-process-tree/: Cargo.toml
crates/stock-sidecar/: NOTICE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
crates/stock-sidecar-runtime/: Cargo.toml
crates/stock-sidecar-runtime/src/: lib.rs
docs/: README.md  REFERENCE_PROJECTS.md  provider-compliance-review.md  stock-integration-plan.md  stock-integration-status.md
docs/adr/: 0001-stock-sidecar-boundary.md  0002-app-network-and-offline-translation.md
docs/architecture/: overview.md  protocols.md
docs/features/: chat-runtime.md  memory.md  model-routing.md  quick-ask.md  tools.md
docs/operations/: deployment.md
docs/releases/: v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md
scripts/: mirror-manifest.json
scripts/release/: bootstrap-github-secrets.sh  create-ai-release-notes.mjs  create-tauri-updater-manifest.mjs  generate-windows-installer-branding.ps1  msiexec-arguments.ps1  prepare-app-version-from-tag.mjs  stage-translation-runtime.ps1  (+5 more)
(+460 files in other folders)
