[package]
name = "calen-stock-portfolio-core-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Keep this lightweight harness outside the Tauri workspace dependency graph.
# It compiles the exact ledger source files used by the desktop application so
# Windows can execute the domain tests without loading WebView2/Tauri DLLs.
[workspace]

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.45"
dirs = "6.0.0"
getrandom = "0.3.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4"] }
zeroize = "1.8.2"
