[package]
name = "calen-stock-sidecar-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.52.3", features = ["process"] }

[dev-dependencies]
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["io-util", "macros", "rt-multi-thread", "time"] }

[target.'cfg(windows)'.dev-dependencies]
calen-stock-process-tree = { path = "../stock-process-tree" }
